--- a/pages/index.html
+++ b/pages/index.html
@@ -19,7 +19,7 @@
     <body>
         <!-- navbar starts here -->
         <div class="container-fluid position-relative p-0">
-            <nav class="navbar navbar-expand-lg navbar-dark bg-info py-3 px-2" aria-label="navbar">
+            <nav class="navbar navbar-expand-lg navbar-dark bg-info py-3 px-2 fixed-top" aria-label="navbar">
                 <div class="container-fluid">
                     <img src="../assets/logo.png" style="width: 50px; margin-right:10px;">
                     <a class="navbar-brand fs-3" href="#">Ottawa Dental Clinic</a>
@@ -45,7 +45,7 @@
                                 <a class="nav-link" href="#">Contact Us</a>
                             </li>
                         </ul>
-                        <a id="#book" href="" class="btn bg-white py-2 px-4">Book an appointment</a>
+                        <a id="#book" href="" class="btn bg-white py-2 px-4">Book an Appointment</a>
                     </div>
                 </div>
             </nav>
@@ -53,9 +53,91 @@
         <!-- navbar ends here -->
 
         <!-- hero section starts here -->
+        <div class="container-fluid col-lg-10 px-4 py-4">
+            <div class="row flex-lg-row-reverse align-items-center g-5">
+                <div class="col-10 col-lg-6">
+                    <img src="../assets/hero.png" class="d-block mx-lg-auto img-fluid" alt="">
+                </div>
+                <div class="col-lg-6">
+                    <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">
+                        Welcome to Ottawa Dental Clinic
+                    </h1>
+                    <p class="lead pt-2">
+                        At Ottawa Dental Clinic, we are committed to providing top-quality dental care in a comfortable
+                        and friendly environment.
+                    </p>
+                    <div class="d-grid gap-2 d-md-flex justify-content-md-start pt-2">
+                        <button type="button" class="btn btn-info btn-lg px-4 me-md-2 text-white fs-4">Book an
+                            Appointment</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- hero section ends here -->
 
-        
+        <!-- About Us section starts here -->
+        <div class="container-fluid col-lg-12 p-5">
+            <div class="row g-5 align-items-center">
+                <div class="col-lg-6">
+                    <div class="row g-5">
+                        <div class="col-6 text-start">
+                            <img class="img-fluid rounded w-100 wow zoomIn" data-wow-delay="0.1s" src="img/about-1.jpg">
+                        </div>
+                        <div class="col-6 text-start">
+                            <img class="img-fluid rounded w-75 wow zoomIn" data-wow-delay="0.3s" src="img/about-2.jpg"
+                                style="margin-top: 25%;">
+                        </div>
+                        <div class="col-6 text-end">
+                            <img class="img-fluid rounded w-75 wow zoomIn" data-wow-delay="0.5s" src="img/about-3.jpg">
+                        </div>
+                        <div class="col-6 text-end">
+                            <img class="img-fluid rounded w-100 wow zoomIn" data-wow-delay="0.7s" src="img/about-4.jpg">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <h2 class="text-info">About Us</h2>
+                    <p class="mb-4">Ottawa Dental Clinic opened its doors in 2014. Since then, we have worked hard to
+                        provide a
+                        comprehensive and holistic treatment approach to all of our patients. Our dental clinic is
+                        located at 150 Louis Pasteur, Ottawa. We have assembled the best team of dentists,
+                        specialists, dental hygienists, and support personnel.</p>
+                    <p class="mb-4">
+                        Ottawa Dental Clinic is dedicated to providing comprehensive, expert care. Every smile we treat has the
+                        potential to achieve long-term oral health and unparalleled beauty! We excel at excellent
+                        dentistry at Ottawa Dental Care by going above and beyond the typical neighbourhood dentist.
+                    </p>
+                    <div class="row g-4 mb-4">
+                        <div class="col-sm-6">
+                            <div class="d-flex align-items-center border-start border-3 border-info px-3">
+                                <h1 class="flex-shrink-0 display-5 text-info mb-0">10</h1>
+                                <div class="ps-4">
+                                    <p class="mb-0">Years of</p>
+                                    <h6 class="text-uppercase mb-0">Experience</h6>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-6">
+                            <div class="d-flex align-items-center border-start border-3 border-info px-3">
+                                <h1 class="flex-shrink-0 display-5 text-info mb-0">1000+</h1>
+                                <div class="ps-4">
+                                    <p class="mb-0">Happy</p>
+                                    <h6 class="text-uppercase mb-0">Clients</h6>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <a class="btn btn-info btn-lg px-4 me-md-2 mt-2 text-white fs-5" href="" >Read More</a>
+                </div>
+            </div>
+        </div>
+        </div>
+        <!-- About Us section ends here -->
+
     </body>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="../js/main.js"></script>
     <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    
 
 </html>
