--- a/pages/index.html
+++ b/pages/index.html
@@ -56,7 +56,7 @@
         <div class="container-fluid col-lg-10 px-4 py-4">
             <div class="row flex-lg-row-reverse align-items-center g-5">
                 <div class="col-10 col-lg-6">
-                    <img src="../assets/hero.png" class="d-block mx-lg-auto img-fluid" alt="">
+                    <img src="../assets/hero.png" class="d-block mx-lg-auto img-fluid" alt="image of a dentist smiling">
                 </div>
                 <div class="col-lg-6">
                     <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">
