--- a/pages/index.html
+++ b/pages/index.html
@@ -81,7 +81,7 @@
                 <div class="col-lg-6">
                     <div class="row g-5">
                         <div class="col-6 text-start">
-                            <img class="img-fluid rounded w-100 wow zoomIn" data-wow-delay="0.1s" src="img/about-1.jpg">
+                            <img class="img-fluid rounded w-100 wow zoomIn" data-wow-delay="0.1s" src="../assets/about-1.jpg">
                         </div>
                         <div class="col-6 text-start">
                             <img class="img-fluid rounded w-75 wow zoomIn" data-wow-delay="0.3s" src="img/about-2.jpg"
@@ -137,6 +137,7 @@
     </body>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="../js/main.js"></script>
+    <script src="../js/wow/wow.min.js"></script>
     <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     
 
