--- a/pages/index.html
+++ b/pages/index.html
@@ -33,10 +33,13 @@
                                 <a class="nav-link active" aria-current="page" href="#">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">About us</a>
+                                <a class="nav-link" href="#about-us">About us</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Services</a>
+                                <a class="nav-link" href="#services">Services</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#team">Our Team</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#">Reviews</a>
@@ -76,22 +79,22 @@
         <!-- hero section ends here -->
 
         <!-- About Us section starts here -->
-        <div class="container-fluid col-lg-12 p-5">
+        <div id="about-us" class="container-fluid col-lg-12 p-5">
             <div class="row g-5 align-items-center">
                 <div class="col-lg-6">
-                    <div class="row g-5">
+                    <div class="row g-3">
                         <div class="col-6 text-start">
-                            <img class="img-fluid rounded w-100 wow zoomIn" data-wow-delay="0.1s" src="../assets/about-1.jpg">
+                            <img class="img-fluid w-100" src="../assets/about-1.jpg" alt="decorative image">
                         </div>
                         <div class="col-6 text-start">
-                            <img class="img-fluid rounded w-75 wow zoomIn" data-wow-delay="0.3s" src="img/about-2.jpg"
-                                style="margin-top: 25%;">
+                            <img class="img-fluid w-75" src="../assets/about-3.jpg" style="margin-top: 25%;"
+                                alt="decorative image">
                         </div>
                         <div class="col-6 text-end">
-                            <img class="img-fluid rounded w-75 wow zoomIn" data-wow-delay="0.5s" src="img/about-3.jpg">
+                            <img class="img-fluid w-75" src="../assets/about-2.jpg" alt="decorative image">
                         </div>
                         <div class="col-6 text-end">
-                            <img class="img-fluid rounded w-100 wow zoomIn" data-wow-delay="0.7s" src="img/about-4.jpg">
+                            <img class="img-fluid w-100" src="../assets/about-4.jpg" alt="decorative image">
                         </div>
                     </div>
                 </div>
@@ -103,7 +106,8 @@
                         located at 150 Louis Pasteur, Ottawa. We have assembled the best team of dentists,
                         specialists, dental hygienists, and support personnel.</p>
                     <p class="mb-4">
-                        Ottawa Dental Clinic is dedicated to providing comprehensive, expert care. Every smile we treat has the
+                        Ottawa Dental Clinic is dedicated to providing comprehensive, expert care. Every smile we treat
+                        has the
                         potential to achieve long-term oral health and unparalleled beauty! We excel at excellent
                         dentistry at Ottawa Dental Care by going above and beyond the typical neighbourhood dentist.
                     </p>
@@ -127,18 +131,106 @@
                             </div>
                         </div>
                     </div>
-                    <a class="btn btn-info btn-lg px-4 me-md-2 mt-2 text-white fs-5" href="" >Read More</a>
+                    <a class="btn btn-info btn-lg px-4 me-md-2 mt-2 text-white fs-5" href="">Read More</a>
                 </div>
             </div>
         </div>
         </div>
         <!-- About Us section ends here -->
 
+        <!-- Services section starts here -->
+        <div id="services" class="container-fluid col-lg-12 p-5">
+            <div class="row py-3">
+                <h2 class="text-info text-center">Our Services</h2>
+            </div>
+            <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-4 g-4">
+                <div class="col">
+                    <div class="card">
+                        <img class="img-fluid" src="../assets/service1.jpg"
+                            alt="image showing a dentist filling the tooth of a patient">
+                        <div class="card-body">
+                            <h5>Fillings and Restorations</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <img class="img-fluid" src="../assets/service5.webp"
+                            alt="image showing a woman smiling with a set of different tooth colors">
+                        <div class="card-body">
+                            <h5>Teeth Whitening</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <img class="img-fluid" src="../assets/service2.png" alt="image showing a tool holding a tooth">
+                        <div class="card-body">
+                            <h5>Teeth Extraction</h5>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col">
+                    <div class="card">
+                        <img class="img-fluid" src="../assets/service4.jpg"
+                            alt="image showing a dentist cleaning the teeth of a patient">
+                        <div class="card-body">
+                            <h5>Routine Cleanings</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- services section ends here -->
+
+        <!-- team section starts here -->
+        <div id="team" class="container-fluid col-lg-12 p-5">
+            <div class="row py-4">
+                <h2 class="text-info text-center">Our Team Members</h2>
+            </div>
+            <div class="row g-4 px-5">
+                <div class="col-4">
+                    <div class="rounded-circle overflow-hidden">
+                        <img class="img-fluid" src="../assets/dentist5.jpg" alt="">
+                    </div>
+                </div>
+                <div class="col-8 d-flex flex-column justify-content-center">
+                    <div class="m-5">
+                        <h4>Dr Bradley Williams</h4>
+                        <p class="pt-2">
+                            Dr. Bradley Williams, a graduate from McGill University, brings over 5 years of experience to
+                            our team, specializing in advanced dental procedures and oral surgery. With a passion for
+                            patient care and a commitment to excellence, Dr. Williams ensures each patient receives
+                            personalized and compassionate treatment. His expertise and dedication make him a valued member
+                            of our dental clinic, trusted by patients and colleagues alike.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="row g-4 px-5 ">
+                <div class="col-8 d-flex flex-column justify-content-center">
+                    <h4>Dr Bradley Williams</h4>
+                    <p class="pt-2">
+                        Dr. Bradley Williams, a graduate from McGill University, brings over 5 years of experience to
+                        our team, specializing in advanced dental procedures and oral surgery. With a passion for
+                        patient care and a commitment to excellence, Dr. Williams ensures each patient receives
+                        personalized and compassionate treatment. His expertise and dedication make him a valued member
+                        of our dental clinic, trusted by patients and colleagues alike.
+                    </p>
+                </div>
+                <div class="col-4">
+                    <div class="rounded-circle overflow-hidden">
+                        <img class="img-fluid" src="../assets/dentist5.jpg" alt="">
+                    </div>
+                </div>
+            </div>
+            <!-- team section ends here -->
+        </div>
     </body>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="../js/main.js"></script>
-    <script src="../js/wow/wow.min.js"></script>
     <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    
+
 
 </html>
