--- a/pages/index.html
+++ b/pages/index.html
@@ -192,18 +192,18 @@
             <div class="row g-4 px-5">
                 <div class="col-4">
                     <div class="rounded-circle overflow-hidden">
-                        <img class="img-fluid" src="../assets/dentist5.jpg" alt="">
+                        <img class="img-fluid" src="../assets/ceo.png" alt="">
                     </div>
                 </div>
                 <div class="col-8 d-flex flex-column justify-content-center">
                     <div class="m-5">
-                        <h4>Dr Bradley Williams</h4>
+                        <h4>Dr James Rodriguez</h4>
                         <p class="pt-2">
-                            Dr. Bradley Williams, a graduate from McGill University, brings over 5 years of experience to
-                            our team, specializing in advanced dental procedures and oral surgery. With a passion for
-                            patient care and a commitment to excellence, Dr. Williams ensures each patient receives
-                            personalized and compassionate treatment. His expertise and dedication make him a valued member
-                            of our dental clinic, trusted by patients and colleagues alike.
+                            Dr. James Rodriguez is the founder and CEO of Ottawa Dental Clinic. He is a graduate of the
+                            University of Toronto and has over 15 years of experience in the dental field. Dr. Rodriguez
+                            is a passionate advocate for patient care and is committed to providing the highest quality
+                            dental services to all of his patients. He is a respected member of the dental community and
+                            is known for his dedication and expertise.
                         </p>
                     </div>
                 </div>
