--- a/pages/index.html
+++ b/pages/index.html
@@ -225,8 +225,48 @@
                     </div>
                 </div>
             </div>
+            <div class="row g-4 px-5">
+                <div class="col-4">
+                    <div class="rounded-circle overflow-hidden">
+                        <img class="img-fluid" src="../assets/dentist2.jpg" alt="">
+                    </div>
+                </div>
+                <div class="col-8 d-flex flex-column justify-content-center">
+                    <div class="m-5">
+                        <h4>Dr Natalie Smith</h4>
+                        <p class="pt-2">
+                            Dr. Natalie Smith is a graduate of the University of Ottawa and has been practicing
+                            dentistry
+                            for over 10 years. She is passionate about providing exceptional dental care to all of her
+                            patients. Dr. Smith is known for her gentle touch and friendly demeanor, making her a
+                            favourite among patients of all ages. She is committed to providing the highest quality
+                            dental services in a comfortable and welcoming environment.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="row g-4 px-5 ">
+                <div class="col-8 d-flex flex-column justify-content-center">
+                    <h4>Chloe Johnson</h4>
+                    <p class="pt-2">
+                        Chloe Johnson is a nurse that works at the dental care clinic and assists the dentists during
+                        various procedures. With her expertise and caring nature, Chloe ensures that patients feel
+                        comfortable and well taken care of during their dental visits. She plays a crucial role in
+                        maintaining a smooth workflow at the clinic and contributes to the overall success of the dental
+                        team. Chloe's dedication to patient care and her ability to work closely with the dentists make
+                        her an invaluable member of the team.
+                    </p>
+                </div>
+                <div class="col-4">
+                    <div class="rounded-circle overflow-hidden">
+                        <img class="img-fluid" src="../assets/assistant1.jpg" alt="">
+                    </div>
+
+                </div>
+            </div>
             <!-- team section ends here -->
         </div>
+
     </body>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="../js/main.js"></script>
