--- a/pages/index.html
+++ b/pages/index.html
@@ -189,14 +189,14 @@
             <div class="row py-4">
                 <h2 class="text-info text-center">Our Team Members</h2>
             </div>
-            <div class="row g-4 px-5">
+            <div class="row g-4 px-5 py-4">
                 <div class="col-4">
                     <div class="rounded-circle overflow-hidden">
                         <img class="img-fluid" src="../assets/ceo.png" alt="">
                     </div>
                 </div>
                 <div class="col-8 d-flex flex-column justify-content-center">
-                    <div class="m-5">
+                    <div style="margin-left: 50px;">
                         <h4>Dr James Rodriguez</h4>
                         <p class="pt-2">
                             Dr. James Rodriguez is the founder and CEO of Ottawa Dental Clinic. He is a graduate of the
@@ -208,8 +208,9 @@
                     </div>
                 </div>
             </div>
-            <div class="row g-4 px-5 ">
+            <div class="row g-4 px-5 py-4">
                 <div class="col-8 d-flex flex-column justify-content-center">
+                   <div style="margin-right: 50px;">
                     <h4>Dr Bradley Williams</h4>
                     <p class="pt-2">
                         Dr. Bradley Williams, a graduate from McGill University, brings over 5 years of experience to
@@ -218,6 +219,7 @@
                         personalized and compassionate treatment. His expertise and dedication make him a valued member
                         of our dental clinic, trusted by patients and colleagues alike.
                     </p>
+                   </div>
                 </div>
                 <div class="col-4">
                     <div class="rounded-circle overflow-hidden">
@@ -225,14 +227,14 @@
                     </div>
                 </div>
             </div>
-            <div class="row g-4 px-5">
+            <div class="row g-4 px-5 py-4">
                 <div class="col-4">
                     <div class="rounded-circle overflow-hidden">
                         <img class="img-fluid" src="../assets/dentist2.jpg" alt="">
                     </div>
                 </div>
                 <div class="col-8 d-flex flex-column justify-content-center">
-                    <div class="m-5">
+                    <div style="margin-left: 50px;">
                         <h4>Dr Natalie Smith</h4>
                         <p class="pt-2">
                             Dr. Natalie Smith is a graduate of the University of Ottawa and has been practicing
@@ -245,8 +247,9 @@
                     </div>
                 </div>
             </div>
-            <div class="row g-4 px-5 ">
+            <div class="row g-4 px-5 py-4">
                 <div class="col-8 d-flex flex-column justify-content-center">
+                   <div style="margin-right: 50px;">
                     <h4>Chloe Johnson</h4>
                     <p class="pt-2">
                         Chloe Johnson is a nurse that works at the dental care clinic and assists the dentists during
@@ -256,6 +259,7 @@
                         team. Chloe's dedication to patient care and her ability to work closely with the dentists make
                         her an invaluable member of the team.
                     </p>
+                   </div>
                 </div>
                 <div class="col-4">
                     <div class="rounded-circle overflow-hidden">
