--- a/pages/index.html
+++ b/pages/index.html
@@ -192,7 +192,7 @@
             <div class="row g-4 px-5 py-4">
                 <div class="col-4">
                     <div class="rounded-circle overflow-hidden">
-                        <img class="img-fluid" src="../assets/ceo.png" alt="">
+                        <img class="img-fluid" src="../assets/ceo.png" alt="image showing Dr James Rodriguez">
                     </div>
                 </div>
                 <div class="col-8 d-flex flex-column justify-content-center">
@@ -210,27 +210,29 @@
             </div>
             <div class="row g-4 px-5 py-4">
                 <div class="col-8 d-flex flex-column justify-content-center">
-                   <div style="margin-right: 50px;">
-                    <h4>Dr Bradley Williams</h4>
-                    <p class="pt-2">
-                        Dr. Bradley Williams, a graduate from McGill University, brings over 5 years of experience to
-                        our team, specializing in advanced dental procedures and oral surgery. With a passion for
-                        patient care and a commitment to excellence, Dr. Williams ensures each patient receives
-                        personalized and compassionate treatment. His expertise and dedication make him a valued member
-                        of our dental clinic, trusted by patients and colleagues alike.
-                    </p>
-                   </div>
+                    <div style="margin-right: 50px;">
+                        <h4>Dr Bradley Williams</h4>
+                        <p class="pt-2">
+                            Dr. Bradley Williams, a graduate from McGill University, brings over 5 years of experience
+                            to
+                            our team, specializing in advanced dental procedures and oral surgery. With a passion for
+                            patient care and a commitment to excellence, Dr. Williams ensures each patient receives
+                            personalized and compassionate treatment. His expertise and dedication make him a valued
+                            member
+                            of our dental clinic, trusted by patients and colleagues alike.
+                        </p>
+                    </div>
                 </div>
                 <div class="col-4">
                     <div class="rounded-circle overflow-hidden">
-                        <img class="img-fluid" src="../assets/dentist5.jpg" alt="">
+                        <img class="img-fluid" src="../assets/dentist5.jpg" alt="image showing Dr Bradley Williams">
                     </div>
                 </div>
             </div>
             <div class="row g-4 px-5 py-4">
                 <div class="col-4">
                     <div class="rounded-circle overflow-hidden">
-                        <img class="img-fluid" src="../assets/dentist2.jpg" alt="">
+                        <img class="img-fluid" src="../assets/dentist2.jpg" alt="Image showing Dr Natalie Smith">
                     </div>
                 </div>
                 <div class="col-8 d-flex flex-column justify-content-center">
@@ -249,26 +251,58 @@
             </div>
             <div class="row g-4 px-5 py-4">
                 <div class="col-8 d-flex flex-column justify-content-center">
-                   <div style="margin-right: 50px;">
-                    <h4>Chloe Johnson</h4>
-                    <p class="pt-2">
-                        Chloe Johnson is a nurse that works at the dental care clinic and assists the dentists during
-                        various procedures. With her expertise and caring nature, Chloe ensures that patients feel
-                        comfortable and well taken care of during their dental visits. She plays a crucial role in
-                        maintaining a smooth workflow at the clinic and contributes to the overall success of the dental
-                        team. Chloe's dedication to patient care and her ability to work closely with the dentists make
-                        her an invaluable member of the team.
-                    </p>
-                   </div>
+                    <div style="margin-right: 50px;">
+                        <h4>Chloe Johnson</h4>
+                        <p class="pt-2">
+                            Chloe Johnson is a nurse that works at the dental care clinic and assists the dentists
+                            during
+                            various procedures. With her expertise and caring nature, Chloe ensures that patients feel
+                            comfortable and well taken care of during their dental visits. She plays a crucial role in
+                            maintaining a smooth workflow at the clinic and contributes to the overall success of the
+                            dental
+                            team. Chloe's dedication to patient care and her ability to work closely with the dentists
+                            make
+                            her an invaluable member of the team.
+                        </p>
+                    </div>
                 </div>
                 <div class="col-4">
                     <div class="rounded-circle overflow-hidden">
-                        <img class="img-fluid" src="../assets/assistant1.jpg" alt="">
+                        <img class="img-fluid" src="../assets/assistant1.jpg" alt="image showing nurse Chloe Johnson">
                     </div>
 
                 </div>
             </div>
             <!-- team section ends here -->
+
+            <!-- reviews section starts here -->
+            <div id="review" class="container-fluid col-lg-12 p-5">
+                <div class="row">
+                    <div class="col-3">
+                        <div class="card">
+                            <i class="fa fas"></i>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="card">
+                            <i class="fa fas"></i>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="card">
+                            <i class="fa fas"></i>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="card">
+                            <i class="fa fas"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- reviews section ends here -->
+
+
         </div>
 
     </body>
