--- a/pages/index.html
+++ b/pages/index.html
@@ -280,22 +280,30 @@
                 <div class="row">
                     <div class="col-3">
                         <div class="card">
-                            <i class="fa fas"></i>
+                            <div class="card-body">
+                             <h5></h5>
+                            </div>
                         </div>
                     </div>
                     <div class="col-3">
                         <div class="card">
-                            <i class="fa fas"></i>
+                            <div class="card-body">
+
+                            </div>
                         </div>
                     </div>
                     <div class="col-3">
                         <div class="card">
-                            <i class="fa fas"></i>
+                            <div class="card-body">
+
+                            </div>
                         </div>
                     </div>
                     <div class="col-3">
                         <div class="card">
-                            <i class="fa fas"></i>
+                            <div class="card-body">
+
+                            </div>
                         </div>
                     </div>
                 </div>
