--- a/pages/index.html
+++ b/pages/index.html
@@ -156,6 +156,8 @@
                                 alt="image showing a dentist filling the tooth of a patient">
                             <div class="card-body">
                                 <h5>Fillings and Restorations</h5>
+                                <p class="card-text">To restore the function and appearance of your teeth.</p>
+                                <h5>$1200</h5>
                             </div>
                         </div>
                     </div>
@@ -165,6 +167,8 @@
                                 alt="image showing a woman smiling with a set of different tooth colors">
                             <div class="card-body">
                                 <h5>Teeth Whitening</h5>
+                                <p class="card-text">To bleach and make your natural teeth appear brighter and enhancing your smile.</p>
+                                <h5>$1500</h5>
                             </div>
                         </div>
                     </div>
@@ -174,6 +178,8 @@
                                 alt="image showing a tool holding a tooth">
                             <div class="card-body">
                                 <h5>Teeth Extraction</h5>
+                                <p class="card-text">To remove a tooth that is badly damaged or causing pain and problems.</p>
+                                <h5>$1200</h5>
                             </div>
                         </div>
                     </div>
@@ -184,6 +190,8 @@
                                 alt="image showing a dentist cleaning the teeth of a patient">
                             <div class="card-body">
                                 <h5>Routine Cleanings</h5>
+                                <p class="card-text">To maintain the health and cleanliness of your teeth through cleanings.</p>
+                                <h5>$1000</h5>
                             </div>
                         </div>
                     </div>
@@ -198,12 +206,12 @@
                 <div class="row py-4">
                     <h2 class="text-info text-center">Our Team Members</h2>
                 </div>
-                <div class="row g-4 px-5 py-4">
-                    <div class="col-4 col-xl-3">
+                <div class="row g-4 px-3 py-4">
+                    <div class="col-sm-4 col-xl-3">
                         <img class="img-fluid rounded-circle" src="../assets/ceo.png"
                             alt="image showing Dr James Rodriguez">
                     </div>
-                    <div class="col-8 col-xl-9 d-flex flex-column justify-content-center">
+                    <div class="col-sm-8 col-xl-9 d-flex flex-column justify-content-center">
                         <div style="margin-left: 40px;">
                             <h4>Dr James Rodriguez</h4>
                             <p class="pt-2">
@@ -221,7 +229,7 @@
                     </div>
                 </div>
                 <div class="row g-4 px-5 py-4">
-                    <div class="col-8 col-xl-9 d-flex flex-column justify-content-center">
+                    <div class="col-sm-8 col-xl-9 d-flex flex-column justify-content-center">
                         <div style="margin-right:50px;">
                             <h4>Dr Bradley Williams</h4>
                             <p class="pt-2">
@@ -237,17 +245,17 @@
                             </p>
                         </div>
                     </div>
-                    <div class="col-4 col-xl-3">
+                    <div class="col-sm-4 col-xl-3">
                         <img class="img-fluid rounded-circle" src="../assets/dentist5.jpg"
                             alt="image showing Dr Bradley Williams">
                     </div>
                 </div>
                 <div class="row g-4 px-5 py-4">
-                    <div class="col-4 col-xl-3">
+                    <div class="col-sm-4 col-xl-3">
                         <img class="img-fluid rounded-circle" src="../assets/dentist2.jpg"
                             alt="Image showing Dr Natalie Smith">
                     </div>
-                    <div class="col-8 col-xl-9 d-flex flex-column justify-content-center">
+                    <div class="col-sm-8 col-xl-9 d-flex flex-column justify-content-center">
                         <div style="margin-left: 50px;">
                             <h4>Dr Natalie Smith</h4>
                             <p class="pt-2">
@@ -263,7 +271,7 @@
                     </div>
                 </div>
                 <div class="row g-4 px-5 py-4">
-                    <div class="col-8 col-xl-9 d-flex flex-column justify-content-center">
+                    <div class="col-sm-8 col-xl-9 d-flex flex-column justify-content-center">
                         <div style="margin-right: 50px;">
                             <h4>Chloe Johnson</h4>
                             <p class="pt-2">
@@ -281,7 +289,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="col-4 col-xl-3">
+                    <div class="col-sm-4 col-xl-3">
                         <img class="img-fluid rounded-circle" src="../assets/assistant1.jpg"
                             alt="image showing nurse Chloe Johnson">
                     </div>
